--- a/public/assets/css/styles2.css
+++ b/public/assets/css/styles2.css
@@ -35,14 +35,12 @@ h3 {
     margin: auto;/*le bloc va bien se centrer*/
     }
 
-#gallery .active{
+.partner{
     width: 30%;
     padding: 5px;
     transition: width .3s;/* transition sur la largeur quand elle change de statut*/
 }
 
-#gallery .inactive{
-    width: 0;
-    padding: 0;
-    transition: width .3s;/* transition sur la largeur*/
+.active{
+    display: block;
 }
