--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
 		<!-- Fichiers JS -->
 		<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}" defer></script>
 		{% block javascripts %}{% endblock %}
-		<script src="{{ asset('assets/js/script1.js') }}" defer></script>
+		{# <script src="{{ asset('assets/js/script1.js') }}" defer></script> #}
 
 
 	</head>
