Test Unit and Functional

--- a/templates/emails/contactanswercreate.html.twig
+++ b/templates/emails/contactanswercreate.html.twig
@@ -22,6 +22,7 @@
 					<a href="{{ absolute_url(path('app_register_partner')) }}">lien
 					</a>.
 				</p>
+				<p>Dans ce formulaire d'inscription, vous voudrez bien renseigner le type de contrat que vous avez sollicité.</p>
 				<p>Merci.
 				</p>
 
