Fix for the partners permissions-sporthall

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -48,7 +48,7 @@
 
 			<hr class="my-4">
 
-			<h2>Vous êtes déjà membre et vous souhaiter profiter de vos services.</h2>
+			<h2>Vous êtes déjà membre et vous souhaitez profiter de vos services.</h2>
 			<p class="mt-4">Vous voulez gérer votre compte adhérent PlanetBody:</p>
 
 			<a class="btn btn-primary btn-lg" href="{{ path('app_login')}}" role="button">Cliquez ici!</a>
@@ -59,14 +59,15 @@
 				<a href=" {{ path('app_permission_index')}} ">nos prestations</a>. Vous bénéfierez de tous les avantages de nos franchisés:</h2>
 
 
-			<a class="btn btn-primary btn-lg" href="{{ path('app_contact')}}" role="button">
+			<a class="btn btn-primary btn-lg mt-4" href="{{ path('app_contact')}}" role="button">
 				<strong>Ouvrir un club sous franchise</strong>
 			</a>
 
 
-			<a class="btn btn-primary btn-lg" href="{{ path('app_claim')}}" role="button">Demande d'informations</a>
+			<a class="btn btn-primary btn-lg mt-4" href="{{ path('app_claim')}}" role="button">Demande d'informations</a>
 
-			<a class="btn btn-primary btn-lg" href="{{ path('app_showpermission_index')}}" role="button">Voir nos offres</a>
+
+			<a class="btn btn-primary btn-lg mt-4" href="{{ path('app_showpermission_index')}}" role="button">Voir nos offres</a>
 
 
 			<hr class="my-4">
