--- a/templates/pages/user/show.html.twig
+++ b/templates/pages/user/show.html.twig
@@ -64,7 +64,7 @@
 										-(
 										{{ permission.isEnable ? 'Active' : 'Désactivée' }}
 										)-
-																																																																																																																																																																																																																																																																																																																																																																																																																																																								/
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																		/
 									{% endfor %}
 								</td>
 							</tr>
@@ -151,10 +151,10 @@
 		{% endif %}
 
 
-		<a href="{{ path('home.index') }}">Retour accueil</a>
+		<a href="{{ path('home_index') }}">Retour accueil</a>
 
 		{# <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-																																																																																																																	
-																																																																																																																			{{ include('pages/user/_delete_form.html.twig') }}</div> #}
+																																																																																																																			
+																																																																																																																					{{ include('pages/user/_delete_form.html.twig') }}</div> #}
 
 	{% endblock %}
