--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{ path('home.index')}}"><img src="{{ asset('assets/images/logopb.png')}}" alt="Logo" style="max-width: 4rem; border-radius: 30px;"></a>
+		<a class="navbar-brand" href="{{ path('home_index')}}"><img src="{{ asset('assets/images/logopb.png')}}" alt="Logo" style="max-width: 4rem; border-radius: 30px;"></a>
 
 
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,11 +10,11 @@
 			<ul
 				class="navbar-nav me-auto">
 				{# <li class="nav-item">
-																																																																																																																																																																																																																																													<a class="nav-link active" href="{{ path('readme')}}">ReadMe
-																																																																																																																																																																																																																																								
-																																																																																																																																																																																																																																														<span class="visually-hidden">(current)</span>
-																																																																																																																																																																																																																																													</a>
-																																																																																																																																																																																																																																												</li> #}
+																																																																																																																																																																																																																																																					<a class="nav-link active" href="{{ path('readme')}}">ReadMe
+																																																																																																																																																																																																																																																
+																																																																																																																																																																																																																																																						<span class="visually-hidden">(current)</span>
+																																																																																																																																																																																																																																																					</a>
+																																																																																																																																																																																																																																																				</li> #}
 
 				<li class="nav-item">
 					<a class="nav-link active" href="{{ path('app_contact')}}">Ouvrir une franchise
@@ -159,7 +159,8 @@
 
 									<a class="dropdown-item" href="{{ path('app_ownsporthall_index')}}">Activer/désactiver ses structures</a>
 									{# <a class="dropdown-item" href="{{ path('app_sporthall_index')}}">Activer/désactiver les structures</a> #}
-									<a class="dropdown-item" href="{{ path('app_sporthallpermission_index')}}">Gérer les structures et les permissions</a>
+									<a class="dropdown-item" href="{{ path('app_ownsporthall_permission_index')}}">Gérer les structures et les permissions</a>
+
 								</div>
 							</li>
 						{% endif %}
@@ -195,9 +196,9 @@
 			</ul>
 
 			{# <form class="d-flex">
-																																																																																																																																																																																												<input class="form-control me-sm-2" type="text" placeholder="Search">
-																																																																																																																																																																																												<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-																																																																																																																																																																																											</form> #}
+																																																																																																																																																																																																		<input class="form-control me-sm-2" type="text" placeholder="Search">
+																																																																																																																																																																																																		<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+																																																																																																																																																																																																	</form> #}
 		</div>
 	</div>
 </nav>
