--- a/templates/pages/permission/indexshowpermission.html.twig
+++ b/templates/pages/permission/indexshowpermission.html.twig
@@ -40,7 +40,7 @@
 			{{ knp_pagination_render(permissions) }}
 		</div>
 
-		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('home.index') }}">Retour à l'accueil</a>
+		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('home_index') }}">Retour à l'accueil</a>
 
 
 	</div>
