--- a/templates/pages/user/show.html.twig
+++ b/templates/pages/user/show.html.twig
@@ -59,12 +59,13 @@
 							<tr>
 								<th>Options</th>
 								<td>
-									{% for permission in permissions %}
+									{% for permission in user.sporthalls.permissions %}
+
 										{{ permission.name }}
 										-(
 										{{ permission.isEnable ? 'Active' : 'Désactivée' }}
 										)-
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																		/
+																																																																										/
 									{% endfor %}
 								</td>
 							</tr>
@@ -79,7 +80,6 @@
 					<div class="mb-4">
 						<a class="btn btn-secondary btn-lg mt-4" href="{{ path('app_logout') }}">Me déconnecter</a>
 					</div>
-
 
 				{% endif %}
 				{% if user.partners.isEnable == true %}
@@ -118,7 +118,7 @@
 							<tr>
 								<th>Options</th>
 								<td>
-									{% for permission in permissions %}
+									{% for permission in user.partners.permissions %}
 										{{ permission.name }}
 										-(
 										<b>{{ permission.isEnable ? 'Active' : 'Désactivée' }}</b>
@@ -154,7 +154,7 @@
 		<a href="{{ path('home_index') }}">Retour accueil</a>
 
 		{# <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-																																																																																																																			
-																																																																																																																					{{ include('pages/user/_delete_form.html.twig') }}</div> #}
+																																																																																																																											
+																																																																																																																													{{ include('pages/user/_delete_form.html.twig') }}</div> #}
 
 	{% endblock %}
