Comment the controller

--- a/templates/emails/contactansweredit.html.twig
+++ b/templates/emails/contactansweredit.html.twig
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		{# Answer after the update for the permission or the link for the registration of the partner #}
 		<h1>Demande de
 			{{ contact.fullName }}</h1>
 
