--- a/templates/emails/claim.html.twig
+++ b/templates/emails/claim.html.twig
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		{# Templat Email for the claims of customers #}
 		<h1>Demande de
 			{{ claim.fullName }}</h1>
 
