--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		{# Template Email for the first contact #}
 		<h1>Demande de
 			{{ contact.fullName }}</h1>
 
