--- a/templates/emails/sporthallpermission.html.twig
+++ b/templates/emails/sporthallpermission.html.twig
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		{# Answer for the update of the permission of a sporthall #}
 		<h1>Demande de M/Mme
 			{{ sporthall.user.contact }}</h1>
 
