Update for the access Partner

--- a/templates/pages/sporthall/editpermission.html.twig
+++ b/templates/pages/sporthall/editpermission.html.twig
@@ -15,7 +15,7 @@
 
 		{{ include('pages/sporthall/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('app_sporthallpermission_index') }}">Retour à la liste</a>
+		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('home_index') }}">Retour à l'accueil</a>
 
 
 		{{ include('pages/sporthall/_delete_form.html.twig') }}</div>
